tablet view luckywheel

--- a/pages/spin-wheel.html
+++ b/pages/spin-wheel.html
@@ -18,11 +18,11 @@
     <div class="wu-spin-wheel">
         <!-- background video -->
         <div class="wu-spin-wheel__bodybg">
-            <video src="/assets/images/spin-wheel-bg-vid.mp4"  autoplay="true" loop="true" controls muted></video>
+            <video src="../assets/images/spin-wheel-bg-vid.mp4"  autoplay="true" loop="true" muted></video>
         </div>
         <div class="wu-spin-wheel__outer">
             <div class="wu-spin-wheel__head">
-                <div class="wu-spin-wheel__logo">
+                <div class="wu-spin-wheel__logo" style="background-image: url('../assets/images/black-logo-bg.png');">
                     <img src="../assets/images/spin-wheel-logo.svg" alt="">
                 </div>
                 <a href="" class="wu-spin-wheel__close">
@@ -32,67 +32,71 @@
                     </svg>                    
                 </a>
             </div>
-            <div class="wu-spin-wheel__body">
-                <!-- left box -->
-                <div class="wu-spin-wheel__left">
-                    <div class="wu-spin-wheel__sidehead">
-                        <h4>20</h4>
-                        <p>Participants in Queue</p>
-                    </div>
-                    <div  class="wu-spin-wheel__sidetext">
-                        <p>Ashley Markose</p>
-                        <p>Ashley Markose</p>
-                        <p>Ashley Markose</p>
-                        <p>Ashley Markose</p>
-                        <p>Ashley Markose</p>
-                        <p>Ashley Markose</p>
-                        <p>Ashley Markose</p>
+            <div class="content-wrapper-small">
+                <div class="wu-spin-wheel__bodyouter">
+                    <div class="wu-spin-wheel__body">
+                        <!-- left box -->
+                        <div class="wu-spin-wheel__left">
+                            <div class="wu-spin-wheel__sidehead">
+                                <h4>20</h4>
+                                <p>Participants in Queue</p>
+                            </div>
+                            <div  class="wu-spin-wheel__sidetext">
+                                <p>Ashley Markose</p>
+                                <p>Ashley Markose</p>
+                                <p>Ashley Markose</p>
+                                <p>Ashley Markose</p>
+                                <p>Ashley Markose</p>
+                                <p>Ashley Markose</p>
+                                <p>Ashley Markose</p>
+                            </div>
+                        </div>
+                        <!-- spin wheel -->
+                        <div class="wu-spin-wheel__middle">
+                            <div class="wu-spin-wheel__discwrap">
+                                <div class="wu-spin-wheel__disc" style="background-image: url('../assets/images/luckywheel_outer.png');">
+                                    <div class="wu-spin-wheel__spinner" style="background-image: url('../assets/images/luckywheel_inner.png');">
+                                        <!-- <img src="../assets/images/luckywheel_inner.png" alt=""> -->
+                                    </div>
+                                    <div class="wu-spin-wheel__pointer">
+                                        <img src="../assets/images/wheel-pointer.svg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#" class="wu-spin-wheel__btn">Spin Wheel</a>
+                            <a href="#" class="wu-spin-wheel__btn wu-spin-wheel__btn--modal" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Stop Wheel</a>
+                        </div>
+                        <!-- right box -->
+                        <div class="wu-spin-wheel__right">
+                            <div class="wu-spin-wheel__sidehead">
+                                <!-- <h4>20</h4> -->
+                                <p>Players won</p>
+                            </div>
+                            <div  class="wu-spin-wheel__sidetext">
+                                <div class="wu-spin-wheel__players">
+                                    <p>Ashley Markose</p>
+                                    <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
+                                </div>
+                                <div class="wu-spin-wheel__players">
+                                    <p>Ashley Markose</p>
+                                    <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
+                                </div>
+                                <div class="wu-spin-wheel__players">
+                                    <p>Ashley Markose</p>
+                                    <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
+                                </div>
+                                <div class="wu-spin-wheel__players">
+                                    <p>Ashley Markose</p>
+                                    <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
+                                </div>
+                                <div class="wu-spin-wheel__players">
+                                    <p>Ashley Markose</p>
+                                    <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <!-- spin wheel -->
-                <div class="wu-spin-wheel__middle">
-                    <div class="wu-spin-wheel__disc">
-                        <div class="wu-spin-wheel__spinner">
-                            <img src="../assets/images/luckywheel.png" alt="">
-                        </div>
-                        <div class="wu-spin-wheel__pointer">
-                            <img src="/assets/images/wheel-pointer.svg" alt="">
-                        </div>
-                    </div>
-                    <a href="#" class="wu-spin-wheel__btn">Spin Wheel</a>
-                    <a href="#" class="wu-spin-wheel__btn wu-spin-wheel__btn--modal" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Stop Wheel</a>
-                </div>
-                <!-- right box -->
-                <div class="wu-spin-wheel__right">
-                    <div class="wu-spin-wheel__sidehead">
-                        <!-- <h4>20</h4> -->
-                        <p>Players won</p>
-                    </div>
-                    <div  class="wu-spin-wheel__sidetext">
-                        <div class="wu-spin-wheel__players">
-                            <p>Ashley Markose</p>
-                            <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
-                        </div>
-                        <div class="wu-spin-wheel__players">
-                            <p>Ashley Markose</p>
-                            <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
-                        </div>
-                        <div class="wu-spin-wheel__players">
-                            <p>Ashley Markose</p>
-                            <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
-                        </div>
-                        <div class="wu-spin-wheel__players">
-                            <p>Ashley Markose</p>
-                            <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
-                        </div>
-                        <div class="wu-spin-wheel__players">
-                            <p>Ashley Markose</p>
-                            <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="content-wrapper">
             </div>
         </div>
         <!-- modal body -->
