spinwheel asset update

--- a/pages/spin-wheel.html
+++ b/pages/spin-wheel.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- styles -->
-    <link rel="stylesheet" href="../assets/css/aos.css">
+    <!-- <link rel="stylesheet" href="../assets/css/aos.css">
     <link rel="stylesheet" href="../assets/css/slick.css">
     <link rel="stylesheet" href="../assets/css/slick-theme.css">
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.css" />
     <!-- styles -->
     <title>Document</title>
@@ -42,19 +44,19 @@
                                 <p>Participants in Queue</p>
                             </div>
                             <div  class="wu-spin-wheel__sidetext">
-                                <p>Ashley Markose</p>
-                                <p>Ashley Markose</p>
-                                <p>Ashley Markose</p>
-                                <p>Ashley Markose</p>
-                                <p>Ashley Markose</p>
-                                <p>Ashley Markose</p>
-                                <p>Ashley Markose</p>
+                                <p>Ashly Markose</p>
+                                <p>Ashly Markose</p>
+                                <p>Ashly Markose</p>
+                                <p>Ashly Markose</p>
+                                <p>Ashly Markose</p>
+                                <p>Ashly Markose</p>
+                                <p>Ashly Markose</p>
                             </div>
                         </div>
                         <!-- spin wheel -->
                         <div class="wu-spin-wheel__middle">
                             <div class="wu-spin-wheel__discwrap">
-                                <div class="wu-spin-wheel__disc" style="background-image: url('../assets/images/luckywheel_outer.png');">
+                                <div class="wu-spin-wheel__disc" style="background-image: url('../assets/images/luckywheel_transparent.png');">
                                     <div class="wu-spin-wheel__spinner" style="background-image: url('../assets/images/luckywheel_inner.png');">
                                         <!-- <img src="../assets/images/luckywheel_inner.png" alt=""> -->
                                     </div>
@@ -74,23 +76,23 @@
                             </div>
                             <div  class="wu-spin-wheel__sidetext">
                                 <div class="wu-spin-wheel__players">
-                                    <p>Ashley Markose</p>
+                                    <p>Ashly Markose</p>
                                     <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
                                 </div>
                                 <div class="wu-spin-wheel__players">
-                                    <p>Ashley Markose</p>
+                                    <p>Ashly Markose</p>
                                     <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
                                 </div>
                                 <div class="wu-spin-wheel__players">
-                                    <p>Ashley Markose</p>
+                                    <p>Ashly Markose</p>
                                     <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
                                 </div>
                                 <div class="wu-spin-wheel__players">
-                                    <p>Ashley Markose</p>
+                                    <p>Ashly Markose</p>
                                     <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
                                 </div>
                                 <div class="wu-spin-wheel__players">
-                                    <p>Ashley Markose</p>
+                                    <p>Ashly Markose</p>
                                     <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
                                 </div>
                             </div>
@@ -109,7 +111,7 @@
                 <div class="modal-body">
                   <p class="wu-spin-wheel__congrts">Congratulations</p>
                   <p class="wu-spin-wheel__prize">1st Prize winner</p>
-                  <h4 class="wu-spin-wheel__winner">Ashley Markose</h4>
+                  <h4 class="wu-spin-wheel__winner">Ashly Markose</h4>
                   <p>+62 6956 3654</p>
                 </div>
                 <div class="modal-footer">
@@ -123,10 +125,13 @@
     <!-- body content end -->
 
     <!-- scripts -->
-    <script src="../assets/js/jquery.slim.min.js"></script>
-    <script src="../assets/js/aos.js"></script>
-    <script src="../assets/js/slick.min.js"></script>
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="../assets/js/jquery.slim.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+  <!-- <script src="../assets/js/aos.js"></script>
+  <script src="../assets/js/slick.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
     <script src="../assets/js/script.js"></script>
     <!-- scripts -->
   </body>
