--- a/pages/spin-wheel-2.html
+++ b/pages/spin-wheel-2.html
@@ -68,7 +68,7 @@
                         <div class="wu-spin-wheel__right">
                             <div class="wu-spin-wheel__sidehead">
                                 <!-- <h4>20</h4> -->
-                                <p>Players won</p>
+                                <p>Past Winners</p>
                             </div>
                             <div  class="wu-spin-wheel__sidetext">
                                 <div class="wu-spin-wheel__players">
