--- a/pages/spin-wheel-1.html
+++ b/pages/spin-wheel-1.html
@@ -40,7 +40,7 @@
                             </div>
                             <div class="price-details__card-cnt">
                                 <div class="price-details__card-title">1st price</div>
-                                <div class="price-details__card-price">500$ cash</div>
+                                <div class="price-details__card-price">500$ Cash Coupon </div>
                             </div>
                         </div>
                         <div class="price-details__card">
@@ -48,8 +48,8 @@
                                 <img src="../assets/images/spin-wheel-price-card-bg.png" alt="">
                             </div>
                             <div class="price-details__card-cnt">
-                                <div class="price-details__card-title">1st price</div>
-                                <div class="price-details__card-price">500$ cash</div>
+                                <div class="price-details__card-title">2nd price</div>
+                                <div class="price-details__card-price">Philips Refrigerator</div>
                             </div>
                         </div>
                         <div class="price-details__card">
@@ -57,8 +57,8 @@
                                 <img src="../assets/images/spin-wheel-price-card-bg.png" alt="">
                             </div>
                             <div class="price-details__card-cnt">
-                                <div class="price-details__card-title">1st price</div>
-                                <div class="price-details__card-price">500$ cash</div>
+                                <div class="price-details__card-title">3rd price</div>
+                                <div class="price-details__card-price">Samsung 32” smart tv</div>
                             </div>
                         </div>
                     </div>
@@ -115,22 +115,27 @@
                             <div class="wu-spin-wheel__sidetext">
                                 <div class="wu-spin-wheel__players">
                                     <p>Ashly Markose</p>
+                                    <p class="wu-spin-wheel__prizedetail">Won: 500$ Cash Coupon</p>
                                     <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
                                 </div>
                                 <div class="wu-spin-wheel__players">
                                     <p>Ashly Markose</p>
+                                    <p class="wu-spin-wheel__prizedetail">Won: Apple iphone 14 pro</p>
                                     <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
                                 </div>
                                 <div class="wu-spin-wheel__players">
                                     <p>Ashly Markose</p>
+                                    <p class="wu-spin-wheel__prizedetail">Won: Dior Perfume 300 ml</p>
                                     <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
                                 </div>
                                 <div class="wu-spin-wheel__players">
                                     <p>Ashly Markose</p>
+                                    <p class="wu-spin-wheel__prizedetail">Won: Dior Perfume 300 ml</p>
                                     <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
                                 </div>
                                 <div class="wu-spin-wheel__players">
                                     <p>Ashly Markose</p>
+                                    <p class="wu-spin-wheel__prizedetail">Won: Dior Perfume 300 ml</p>
                                     <span class="wu-spin-wheel__date">2023-Mar-11 10:00 PM</span>
                                 </div>
                             </div>
