--- a/pages/spin-wheel-3.html
+++ b/pages/spin-wheel-3.html
@@ -41,6 +41,18 @@
                   <p class="wu-spin-wheel__prize">1st Prize winner</p>
                   <h4 class="wu-spin-wheel__winner">Ashly Markose</h4>
                   <p>+62 6956 3654</p>
+                  <div class="wu-spin-wheel__winnerouter">
+                    <div class="wu-spin-wheel__winnersec">
+                      <p class="wu-spin-wheel__prize">2nd Prize winner</p>
+                      <h4 class="wu-spin-wheel__winner">Ashly Markose</h4>
+                      <p>+62 6956 3654</p>
+                    </div>
+                    <div class="wu-spin-wheel__winnersec">
+                      <p class="wu-spin-wheel__prize">3rd Prize winner</p>
+                      <h4 class="wu-spin-wheel__winner">Ashly Markose</h4>
+                      <p>+62 6956 3654</p>
+                    </div>
+                  </div>
                 </div>
                 <div class="modal-footer">
                     <a href="../pages/spin-wheel-1.html" class="wu-spin-wheel__btn">Finish</a>
