luckydraw font upload

--- a/pages/spin-wheel-1.html
+++ b/pages/spin-wheel-1.html
@@ -39,7 +39,7 @@
                                 <img src="../assets/images/spin-wheel-price-card-bg.png" alt="">
                             </div>
                             <div class="price-details__card-cnt">
-                                <div class="price-details__card-title">1st price</div>
+                                <div class="price-details__card-title">1st prize</div>
                                 <div class="price-details__card-price">500$ Cash Coupon </div>
                             </div>
                         </div>
@@ -48,7 +48,7 @@
                                 <img src="../assets/images/spin-wheel-price-card-bg.png" alt="">
                             </div>
                             <div class="price-details__card-cnt">
-                                <div class="price-details__card-title">2nd price</div>
+                                <div class="price-details__card-title">2nd prize</div>
                                 <div class="price-details__card-price">Philips Refrigerator</div>
                             </div>
                         </div>
@@ -57,7 +57,7 @@
                                 <img src="../assets/images/spin-wheel-price-card-bg.png" alt="">
                             </div>
                             <div class="price-details__card-cnt">
-                                <div class="price-details__card-title">3rd price</div>
+                                <div class="price-details__card-title">3rd prize</div>
                                 <div class="price-details__card-price">Samsung 32” smart tv</div>
                             </div>
                         </div>
